[gd_scene load_steps=4 format=3 uid="uid://et03eynqbyvv"]

[ext_resource type="Script" path="res://enemies/MiniBoss.gd" id="1_7dhry"]
[ext_resource type="Texture2D" uid="uid://dd5cuh81st0ia" path="res://assets/BossAssets.png" id="1_le0rv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0a1d"]
size = Vector2(32, 16)

[node name="MiniBoss" type="Node2D"]
script = ExtResource("1_7dhry")
max_health = 3
health = 3

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(2, 2)
texture = ExtResource("1_le0rv")

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("RectangleShape2D_d0a1d")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -5)
emitting = false
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, -1)
spread = 120.0
gravity = Vector2(0, -300)
initial_velocity_min = 15.0
initial_velocity_max = 30.0
scale_amount_min = 0.25
color = Color(1, 0.223529, 0.219608, 1)

[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
